--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-popup": "^0.11.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
+    "react-tooltip": "^5.28.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
